--- a/assign/first.html
+++ b/assign/first.html
@@ -8,15 +8,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body class="inter">
     <header>
-            <nav>
+            <section class="navbar">
+                <nav>
                 <div class="nav-container">
                  <h2 class="crnr-head">LOGO</h2>
                 <button class="button1">Sign Up</button>
                </div>
             </nav>
+            </section>
+            <section>
+                <div class="boxi">
+                    <h2>Cool Dark UI Template for Webflow Agencies!</h2>
+                    <button class="button2">Stay Focused</button>
+                </div>
+            </section>
     </header>
     <main>
 
