--- a/assign/first.html
+++ b/assign/first.html
@@ -117,6 +117,26 @@
             </div>
             
         </div>
+        <section class="intouch">
+               <div class="contact">
+                 <div class="lets">
+                   <h2 style="font-size: 97px; font-weight: bold;">Let’s Get in Touch</h2>
+                 </div>
+                 <div class="input">
+                  <form action="">
+                    <h5 class="h5ws">Your Email</h5>
+                      <input class="inputs" type="email" placeholder="example@email.com" required />
+                      <br>
+                      <h5 class="h5ws">Name</h5>
+                      <input class="inputs" type="text" placeholder="Full Name" required />
+                      <br>
+                      <h5 class="h5ws">Message</h5>
+                      <textarea class="inputs" cols="40"; rows="10" placeholder="Write your message..." rows="5" required></textarea>
+                      <button class="button2" type="submit">Get in Touch</button>
+                  </form>
+                 </div>
+              </div>
+        </section>
 
 
     </main>
