--- a/assign/first.html
+++ b/assign/first.html
@@ -140,7 +140,17 @@
 
 
     </main>
-    <footer>
+    <footer style="background-color: white;">
+        
+            <div class="logos">
+                <h2 class="logo" style=" padding-top: 100px; ">LOGO</h2>
+                <p style="color: rgb(146, 140, 140); max-width: 600px; margin-left: 350px;">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                <a href=""><button class="btn4">HOME</button></a>
+                <a href=""><button class="btn4">ABOUT</button></a>
+                <a href=""><button class="btn4">How it works</button></a>
+                <a href=""><button class="btn4">SERVICES</button></a>
+            </div>
+        
 
     </footer>
 
